# Distributed-Game-Load-Testing

./: .gitignore  README.md
game-server/: CMakeLists.txt  temp_thread_test.cpp
game-server/config/: server.json
game-server/include/: ClientManager.h  ClientSession.h  Logger.h  Metrics.h  MetricsPrinter.h  Protocol.h  Server.h
game-server/src/: ClientSession.cpp  Clientmanager.cpp  Logger.cpp  Metrics.cpp  MetricsPrinter.cpp  Protocol.cpp  Server.cpp  main.cpp
load-tester/: load_tester.py  manual_client.py  report.py
load-tester/scenarios/: load.json  smoke.json  spike.json  stress.json
